# agent-watchdog

./: ISSUE_4682_COMMENT_DRAFT.md  README.md  SPEC.md  SUBSTACK_FOLLOWUP.md  pyproject.toml
examples/: crewai_example.py  langchain_example.py  langchain_quickstart.py
src/agent_watchdog/: __init__.py  watchdog.py
src/agent_watchdog.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_watchdog.py
