[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-watchdog"
version = "0.1.5"
description = "A circuit breaker for AI agent runs: loop detection, budget guards, graceful halts."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Water Woods", email = "woodwater2026@gmail.com"}]
keywords = ["ai", "agents", "llm", "monitoring", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/woodwater2026/agent-watchdog"
Repository = "https://github.com/woodwater2026/agent-watchdog"

[tool.setuptools.packages.find]
where = ["src"]
